# datafusion-functions-json

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: main.rs
src/: common.rs  common_get.rs  common_macros.rs  common_union.rs  json_as_text.rs  json_contains.rs  json_extract.rs  json_extract_scalar.rs  json_format.rs  json_from_scalar.rs  json_get.rs  json_get_array.rs  json_get_bool.rs  json_get_float.rs  json_get_int.rs  json_get_json.rs  json_get_str.rs  json_length.rs  json_obj_contains.rs  json_object_keys.rs  json_parse.rs  json_str_contains.rs  json_union_to_text.rs  lib.rs  macros.rs  rewrite.rs  union.rs
tests/: json_extract_scalar_test.rs  json_extract_test.rs  json_format_test.rs  json_parse_test.rs  main.rs  test_json_get.rs  test_json_obj_contains.rs  utils.rs
tests/utils/: mod.rs
