[package]
name = "datafusion-functions-json"
version = "0.49.1"
edition = "2021"
description = "JSON functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "JSON", "SQL"]
categories = ["database-implementations", "parsing"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-json/"
rust-version = "1.85.1"

[dependencies]
datafusion = { version = "49", default-features = false }
jiter = "0.10"
log = "0.4"
paste = "1"

[dev-dependencies]
codspeed-criterion-compat = "2.6"
datafusion = { version = "49", default-features = false, features = [
    "nested_expressions",
] }
tokio = { version = "1.43", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"

# in general, we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }

[[bench]]
name = "main"
harness = false
