[package]
name = "datafusion-functions-json"
version = "0.53.0"
edition = "2021"
description = "JSON functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "JSON", "SQL"]
categories = ["database-implementations", "parsing"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-json/"
rust-version = "1.88.0"

[dependencies]
datafusion = { version = "53.0.0", default-features = false, features = [
    "sql",
] }
jiter = "0.13.0"
log = "0.4"
paste = "1"

[dev-dependencies]
codspeed-criterion-compat = "2.6"
datafusion = { version = "53.0.0", default-features = false, features = [
    "nested_expressions",
    "sql",
] }
tokio = { version = "1.43", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"

# in general, we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }

[[bench]]
name = "main"
harness = false

# [patch.crates-io]
# datafusion = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-common = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-expr = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-execution = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-sql = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-proto = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-datasource = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
# datafusion-physical-expr-adapter = { git = "https://github.com/apache/datafusion.git", rev = "d47bd599ee911eb4be018595b860341ff437ccb1" }
